compiler/hachi-hir/tests/snapshots/inference_tests__chaining_infers_unit.snap
---
source: compiler/hachi-hir/tests/inference_tests.rs
expression: doc
snapshot_kind: text
---
module {
  // module intrinsic scalar types
  intrinsic_scalar bool;
  intrinsic_scalar i32;
  intrinsic_scalar unit;
  
  // module intrinsic functions
  
  
  // module types
  
  
  // module functions
  fn test() -> unit {
    let x: i32 = 0::i32;
    x::i32 = 1::i32::unit;
  }
}
