compiler/hachi-hir/tests/snapshots/inference_tests__constant_record_access.snap
---
source: compiler/hachi-hir/tests/inference_tests.rs
expression: doc
snapshot_kind: text
---
module {
  // module types
  type Agent = {
    name: i32,
  }
  
  // module functions
  fn test<>(agent: Agent) -> unit {
    let z: i32 = agent::Agent.name::i32;
  }
}
