compiler/hachi-hir/tests/snapshots/inference_tests__function_calls.snap
---
source: compiler/hachi-hir/tests/inference_tests.rs
expression: doc
snapshot_kind: text
---
module {
  // module intrinsic scalar types
  
  
  // module intrinsic functions
  
  
  // module types
  
  
  // module functions
  fn bar(x: i32) -> i32 {
    return (x as i32);
  }
  fn foo() -> unit {
    let k: i32 = ((bar as fn((i32))->i32)::<>((123 as i32)) as i32);
    let z: i32 = ((generic as fn((i32))->i32)::<>((k as i32)) as i32);
    let z: bool = ((generic as fn((bool))->bool)::<>((true as bool)) as bool);
  }
  fn generic<$0>(x: $0) -> $0 {
    return (x as $0);
  }
}
