compiler/hachi-hir/tests/snapshots/inference_tests__inference_chaining_infers_unit.snap
---
source: compiler/hachi-hir/tests/inference_tests.rs
expression: doc
snapshot_kind: text
---
module {
  // module types
  
  
  // module functions
  fn test<>() -> unit {
    let x: i32 = 0::i32;
    x::i32 = 1::i32::unit;
  }
}
