compiler/hachi-hir/tests/snapshots/inference_tests__offset_index_yields_inner.snap
---
source: compiler/hachi-hir/tests/inference_tests.rs
expression: doc
snapshot_kind: text
---
module {
  // module intrinsic scalar types
  intrinsic_scalar bool;
  intrinsic_scalar i32;
  intrinsic_scalar unit;
  
  // module intrinsic functions
  
  
  // module types
  
  
  // module functions
  fn test(v: *i32) -> unit {
    let k: i32 = v::*i32[0::i32]::i32;
    let q: i32 = v::*i32[k::i32]::i32;
  }
}
