compiler/hachi-hir/tests/snapshots/inference_tests__pointer_deref.snap
---
source: compiler/hachi-hir/tests/inference_tests.rs
expression: doc
snapshot_kind: text
---
module {
  // module intrinsic scalar types
  
  
  // module intrinsic functions
  
  
  // module types
  
  
  // module functions
  fn address_of(a: i32) -> unit {
    let k: *i32 = (&(1 as i32) as *i32);
  }
  fn deref(a: i32, b: **i32) -> unit {
    let m: i32 = (*(*(b as **i32) as *i32) as i32);
  }
}
