compiler/hachi-hir/tests/snapshots/inference_tests__uninitialized_inference.snap
---
source: compiler/hachi-hir/tests/inference_tests.rs
expression: doc
snapshot_kind: text
---
module {
  // module intrinsic scalar types
  
  
  // module intrinsic functions
  
  
  // module types
  
  
  // module functions
  fn foo(x: i32) -> i32 {
    let k: i32 = (((123 as i32)) as i32);
  }
}
